tests/negative/gold/minus-space-test.gold
tests/negative/minus-space-test.toit:12:12: warning: Minus operator must be surrounded by spaces
  print foo- bar
           ^
tests/negative/minus-space-test.toit:11:9: error: Unresolved identifier: 'foo-bar'
  print foo-bar  // Unresolved identifier.
        ^~~~~~~
tests/negative/minus-space-test.toit:18:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed
